--- a/react-vite/src/components/Navigation/NavNUser/NavNUser.css
+++ b/react-vite/src/components/Navigation/NavNUser/NavNUser.css
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 /* Navigation styles for non-logged-in users */
 .nav-container {
   display: flex;
@@ -78,7 +77,7 @@ li:nth-last-child(2) a {
 
 .profile-button-container button:hover {
   color: #0052b3;
-=======
+}
 
 /*main navbar styling */
 .nuser-navbar{
@@ -177,5 +176,4 @@ li:nth-last-child(2) a {
 .login-signup-navbar a {
     text-decoration: none;
     color: inherit;
->>>>>>> main
 }
