--- a/react-vite/src/components/FavoriteButton/FavoriteButton.css
+++ b/react-vite/src/components/FavoriteButton/FavoriteButton.css
@@ -6,7 +6,7 @@
   width: 24px;
   height: 24px;
   display: flex;
-  align-items: center;
+  align-items: cent;
   justify-content: center;
   transition: all 0.2s ease;
   position: absolute;
